# NC-codes

./: CMakeLists.txt  FINAL_BASE_CODE.cpp  FINAL_PROPORTION_THAT_BREAK.cpp  FINAL_TUNNEL.cpp  FINAL_TUNNEL_PRORTION_THAT_BREAK.cpp  README.md  chain_prop.m  check.cpp  combination_touching_open_space.cpp  combination_touching_open_space_main.cpp  density_profiles.m  density_profiles_Jun_04.m  density_profiles_may_21.m  final.cpp  final2.cpp  final_only_track.cpp  final_only_track_proportion.cpp  final_proportion_break.cpp  final_proportion_break_tunnel.cpp  final_with_track.cpp  fixed_gradient_3D.cpp  forced_gradient.cpp  forced_gradient_non_uniform.cpp  non_uniform_growth.m  one_type_cells.cpp  one_type_cells_non_uniform.cpp  open_space_improved_version.cpp  persistent_movement.cpp  persistent_movement_many_sim.cpp  plotting_AQdata.m  timesteps.cpp  touching.cpp  touching_3angles.cpp  touching_3angles_many_sim.cpp  two_types_chains.cpp  two_types_chains_non_uniform.cpp  two_types_open_extra.cpp  two_types_open_extra_main.cpp
